Cleaned up the folder, fixed some layout problems.

--- a/style/budgets-page.css
+++ b/style/budgets-page.css
@@ -108,9 +108,9 @@
 #createBudgetButton {
   padding: 3%;
   margin: 3%;
-  background-color: white;
+  background-color: blue;
   border: 1px solid black;
-  color: black;
+  color: white;
 
   width: 94%;
 
@@ -121,6 +121,10 @@
   font-family: "Josefin Sans", sans-serif;
 
   cursor: pointer;
+}
+
+#createBudgetButton:active {
+  background-color: darkblue;
 }
 
 #createBudgetDropdownContainer {
@@ -195,15 +199,19 @@
   margin-left: 53%;
   width: 47%;
 
-  background-color: white;
+  background-color: blue;
   border: 1px solid black;
-  color: black;
+  color: white;
 
   text-align: center;
   font-size: 1.5em;
   font-family: "Josefin Sans", sans-serif;
 
   cursor: pointer; 
+}
+
+#addToLibraryButton:active {
+  background-color: darkblue;
 }
 
 .hide {
