--- a/style/landing-page.css
+++ b/style/landing-page.css
@@ -207,6 +207,8 @@ a:hover {
 }
 
 #content {
+  margin-bottom: 12.5vw;
+
   min-height: 100vh;
   width: 100%;
   position: absolute;
